--- a/APP/IOS/PointExchange/PointExchange/Base.lproj/HomePage.storyboard
+++ b/APP/IOS/PointExchange/PointExchange/Base.lproj/HomePage.storyboard
@@ -488,77 +488,6 @@
             </objects>
             <point key="canvasLocation" x="1972" y="363.86806596701655"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="TGy-dU-oZ3">
-            <objects>
-                <viewController id="Xaq-gX-hWy" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="05S-wG-UTo">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="35" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Zvg-Cs-yRy">
-                                <rect key="frame" x="76" y="229" width="223" height="105"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="105" id="VQP-7R-Eac"/>
-                                </constraints>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="exchangedPoints" rowHeight="35" id="yRq-iq-OSe" customClass="ExchangedPointsCell" customModule="PointExchange" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="223" height="35"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="yRq-iq-OSe" id="eJT-jh-3vq">
-                                            <rect key="frame" x="0.0" y="0.0" width="223" height="35"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="星巴克" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Qf-qy-5Qt">
-                                                    <rect key="frame" x="13" y="14" width="190" height="17"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <color key="textColor" red="0.54901960780000003" green="0.54901960780000003" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1200.00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Nv-vC-MAB">
-                                                    <rect key="frame" x="20" y="14" width="190" height="17"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <color key="textColor" name="main_lightGreen"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="..........................................." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lON-nT-n9o">
-                                                    <rect key="frame" x="11.5" y="-12" width="200.5" height="20.5"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" red="0.54901960780000003" green="0.54901960780000003" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                    <size key="shadowOffset" width="0.0" height="0.0"/>
-                                                </label>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="8Nv-vC-MAB" firstAttribute="leading" relation="lessThanOrEqual" secondItem="eJT-jh-3vq" secondAttribute="leading" constant="20" symbolic="YES" id="93l-0K-KYy"/>
-                                                <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="2Qf-qy-5Qt" secondAttribute="trailing" constant="20" symbolic="YES" id="FHl-vU-bzD"/>
-                                                <constraint firstItem="lON-nT-n9o" firstAttribute="top" secondItem="eJT-jh-3vq" secondAttribute="top" constant="-12" id="Ldy-Vh-75G"/>
-                                                <constraint firstItem="8Nv-vC-MAB" firstAttribute="top" secondItem="lON-nT-n9o" secondAttribute="bottom" constant="5.5" id="fBz-xF-SRH"/>
-                                                <constraint firstItem="2Qf-qy-5Qt" firstAttribute="top" secondItem="lON-nT-n9o" secondAttribute="bottom" constant="5.5" id="hmO-fA-wcd"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                        <constraints>
-                                            <constraint firstItem="2Qf-qy-5Qt" firstAttribute="leading" secondItem="yRq-iq-OSe" secondAttribute="leading" constant="13" id="TE1-DL-ocP"/>
-                                            <constraint firstItem="lON-nT-n9o" firstAttribute="centerX" secondItem="yRq-iq-OSe" secondAttribute="centerX" id="mkm-8L-Qf2"/>
-                                            <constraint firstAttribute="trailing" secondItem="8Nv-vC-MAB" secondAttribute="trailing" constant="13" id="wMt-5L-tDS"/>
-                                        </constraints>
-                                        <connections>
-                                            <outlet property="exchangedPoints" destination="8Nv-vC-MAB" id="Zzw-7Y-ZYO"/>
-                                            <outlet property="merchantName" destination="2Qf-qy-5Qt" id="Kdv-ci-fWt"/>
-                                        </connections>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="lqG-k5-ZlL"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="qdY-p4-z3D" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2878" y="364"/>
-        </scene>
         <!--记录-->
         <scene sceneID="STa-a7-hvN">
             <objects>
@@ -1005,6 +934,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="223" height="132"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="uz5-zK-dKS"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="epn-9L-ZSa" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1026,14 +956,8 @@
         <namedColor name="main_lightGreen">
             <color red="0.60399997230000002" green="0.52499997620000005" blue="0.086000002919999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <namedColor name="main_lightGreen">
-            <color red="0.60399997230000002" green="0.52499997620000005" blue="0.086000002919999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <namedColor name="main_orange">
             <color red="1" green="0.58399999140000003" blue="0.27500000600000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="main_orange">
-            <color red="1" green="0.58399999141693115" blue="0.27500000596046448" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
