--- a/APP/IOS/PointExchange/PointExchange/HistoryTableViewCell.xib
+++ b/APP/IOS/PointExchange/PointExchange/HistoryTableViewCell.xib
@@ -24,17 +24,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="98"/>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Nuz-I2-NPF">
-                        <rect key="frame" x="283" y="26" width="61.5" height="32.5"/>
+                        <rect key="frame" x="278" y="30" width="69.5" height="38.5"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="有效期至" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TGT-W7-RWe">
-                                <rect key="frame" x="0.0" y="0.0" width="61.5" height="18"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="有效期至" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TGT-W7-RWe">
+                                <rect key="frame" x="0.0" y="0.0" width="69.5" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.90980392156862744" green="0.90980392156862744" blue="0.90980392156862744" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="--------" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="KBf-EL-56o">
-                                <rect key="frame" x="0.0" y="18" width="61.5" height="14.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <rect key="frame" x="0.0" y="20.5" width="69.5" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -72,10 +72,10 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="r0G-ix-9so" firstAttribute="top" secondItem="8DU-e0-UCa" secondAttribute="bottom" constant="-29" id="2Up-uu-m4E"/>
-                    <constraint firstItem="Nuz-I2-NPF" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="283" id="3ny-o4-oqZ"/>
+                    <constraint firstItem="Nuz-I2-NPF" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="278" id="3ny-o4-oqZ"/>
                     <constraint firstItem="8DU-e0-UCa" firstAttribute="leading" secondItem="c71-dH-ynZ" secondAttribute="leading" constant="103" id="FUs-Rc-Ev0"/>
                     <constraint firstItem="c71-dH-ynZ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Kzi-67-LHH"/>
-                    <constraint firstItem="Nuz-I2-NPF" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="15" id="Mxv-bZ-ewG"/>
+                    <constraint firstItem="Nuz-I2-NPF" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="19" id="Mxv-bZ-ewG"/>
                     <constraint firstAttribute="bottom" secondItem="c71-dH-ynZ" secondAttribute="bottom" id="OSs-gy-iFa"/>
                     <constraint firstItem="PDU-lH-p8n" firstAttribute="bottom" secondItem="c71-dH-ynZ" secondAttribute="bottom" constant="-38" id="URY-0c-kHV"/>
                     <constraint firstItem="8DU-e0-UCa" firstAttribute="top" secondItem="c71-dH-ynZ" secondAttribute="top" constant="10" id="YdD-1u-O0x"/>
