--- a/APP/IOS/PointExchange/PointExchange/SignUpView.xib
+++ b/APP/IOS/PointExchange/PointExchange/SignUpView.xib
@@ -31,8 +31,8 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="522"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" distribution="fillProportionally" alignment="center" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="9KW-PY-M4E">
-                    <rect key="frame" x="70" y="29" width="235" height="372"/>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="9KW-PY-M4E">
+                    <rect key="frame" x="70" y="30" width="235" height="372"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="注册" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mBh-WI-Qm8">
                             <rect key="frame" x="97.5" y="0.0" width="40" height="63.5"/>
